# weblang

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  build  example  example2  makeServer.sh  notes  plt.cabal  runWeblangServer  stack.yaml  test_script.py  travis.yml  weblang
.libs/: benchmark  digest_auth_example  fileserver_example  fileserver_example_dirs  minimal_example  minimal_example_comet  post_example  querystring_example  timeout  upgrade_example
alex-example/: Lexer.x  Main.hs
chapter3/: Codegen.hs  Emit.hs  Main.hs  chapter3.k  test-llvm-assembly.ll
client/: client.cpp  hold.c  main
examples/: accessors.wl  array.wl  asserts.wl  averageBitcoin.wl  binop-example.wl  bitcoin_average.wl  boolean-example.wl  bools.wl  checkType.wl  checktypes.wl  coin_helpers.wl  coin_imports.wlh  concat.wl  conditional-example.wl  crazy-hello-world.wl  echo-example.wl  email.wl  emailGCD.wl  equals.wl  foreach-scoping.wl  forloop.wl  full-types.wl  functions-crazy-example.wl  functions-example.wl  hello-world.wl  json-add.wl  json-example.wl  json-with-doubles.wl  multiline-json.wl  nestedobj.wl  newtype.wl  obj-literal.wl  operators.wl  parsing-hello-world-example.wl  priceSlack.wl  prices.wl  reassignment.wl  slack.wl  stdlib.wl  text.wl  (+1 more)
examples/includes/: main.wl  one.wl  three.wl  two.wl
hi/: hi.cabal
jsonlib/: jsonlib.cpp  jsonlib.h
libmicrohttpd-0.9.55/: MHD_config.h  Makefile  config.status  libmicrohttpd.pc  libtool
libmicrohttpd-0.9.55/autom4te.cache/: output.0  requests  traces.0  traces.1
libmicrohttpd-0.9.55/contrib/: Makefile
libmicrohttpd-0.9.55/doc/: Makefile
libmicrohttpd-0.9.55/doc/doxygen/: Makefile
libmicrohttpd-0.9.55/doc/examples/: Makefile  basicauthentication  hellobrowser  largepost  logging  responseheaders  sessions  simplepost
libmicrohttpd-0.9.55/doc/examples/.deps/: basicauthentication.Po  hellobrowser.Po  largepost.Po  logging.Po  responseheaders.Po  sessions.Po  simplepost.Po
libmicrohttpd-0.9.55/doc/examples/.libs/: basicauthentication  hellobrowser  largepost  logging  responseheaders  sessions  (+1 more)
libmicrohttpd-0.9.55/m4/: Makefile
libmicrohttpd-0.9.55/src/: Makefile
libmicrohttpd-0.9.55/src/examples/: Makefile  authorization_example  benchmark  benchmark_https  chunked_example  digest_auth_example  dual_stack_example  fileserver_example  fileserver_example_dirs  fileserver_example_external_select  minimal_example  minimal_example_comet  post_example  post_example.c  querystring_example  refuse_post_example  timeout  upgrade_example
libmicrohttpd-0.9.55/src/include/: Makefile
libmicrohttpd-0.9.55/src/microhttpd/: Makefile  libmicrohttpd.la  libmicrohttpd_la-base64.lo  libmicrohttpd_la-basicauth.lo  libmicrohttpd_la-connection.lo  libmicrohttpd_la-daemon.lo  libmicrohttpd_la-digestauth.lo  libmicrohttpd_la-internal.lo  libmicrohttpd_la-md5.lo  libmicrohttpd_la-memorypool.lo  libmicrohttpd_la-mhd_compat.lo  libmicrohttpd_la-mhd_itc.lo  libmicrohttpd_la-mhd_mono_clock.lo  libmicrohttpd_la-mhd_sockets.lo  libmicrohttpd_la-mhd_str.lo  libmicrohttpd_la-mhd_threads.lo  libmicrohttpd_la-postprocessor.lo  libmicrohttpd_la-reason_phrase.lo  libmicrohttpd_la-response.lo  libmicrohttpd_la-sysfdsetsize.lo  microhttpd_dll_res.rc
libmicrohttpd-0.9.55/src/testcurl/: Makefile
libmicrohttpd-0.9.55/src/testzzuf/: Makefile
src/: AST.hs  Codegen.hs  LLVM.hs  Lexer.x  Main.hs  Parser.y  Program.hs  Semantics.hs
src/Lexer/: Types.hs  Utils.hs
test/: Makefile  build  logfile  test_log  test_script.py  weblang
test/expected/: Accessors  AllTypes  Arg  Array  Assert  Conditional  ConditionalElse  IsObj  JsonAdd  JsonDoubles  Log  PostCondition  Pre  Type  Var
test/tests/: Accessors.wl  AddSub.wl  AllTypes.wl  Arg.wl  Array.wl  Assert.wl  Average.wl  Binops.wl  Bools.wl  Cat.wl  Conditional.failx  Conditional.wl  ConditionalElse.wl  For.wl  ForReassign.wl  Gcd.wl  Get.wl  IsArr.wl  IsBool.wl  IsNum.wl  IsObj.wl  IsString.wl  JsonAdd.wl  JsonDoubles.wl  Log.wl  Mod.wl  Post.wl  PostCondition.wl  Pre.wl  StrEquality.wl  Type.wl  Var.wl  conditional-example.wl  forloop.wl  functions-example.wl  hello-world.wl  json-example.wl  newtype.wl  slack.ll  slack.s  (+1 more)
test/testss/: test1.py  test3.py
(+52 files in other folders)
