name:                plt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/plt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable plt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-tools:         alex, happy
  build-depends:       base >= 4.7 && < 5
                     , array
                     , llvm-hs
                     , llvm-hs-pure

executable alex-happy-example
  hs-source-dirs:      alex-happy-example
  main-is:             Main.hs
  other-modules:       Lexer
                     , Parser
                     , Evaluator
                     , AST
  default-language:    Haskell2010
  build-tools:         alex, happy
  build-depends:       base >= 4.7 && < 5
                     , array
                     , utf8-string
                     , mtl
