name:                plt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/plt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , src/Parser.y
                   , src/Lexer.x

executable weblang
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lexer
                     , Lexer.Types
                     , Lexer.Utils
                     , Parser
                     , AST
                     , Program
                     , LLVM
                     , Codegen
  default-language:    Haskell2010
  build-tools:         alex, happy
  build-depends:       base >= 4.7 && < 5
                     , array
                     , MissingH
                     , containers
                     , GenericPretty
                     , llvm-hs
                     , llvm-hs-pure
                     , mtl
                     , monad-loops

executable chapter3
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:
    Codegen
    Emit
    Lexer
    Parser
    Syntax

  build-depends:
      base                 >= 4.7 && <5
    , haskeline            >= 0.7.1.2
    , llvm-hs              >= 4.0.0.0
    , llvm-hs-pure         >= 4.0.0.0
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.6
    , containers           >= 0.4
  hs-source-dirs:      chapter3

